--- a/coregame.html
+++ b/coregame.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>LessFarGame</title>
-    <script src="./main.js" type="module"></script>
+    <script defer src="./main2.js"></script>
   </head>
   <body>
     <div class="gamepage">
@@ -15,6 +15,7 @@
         >Sorry, your browser does not support canvas technology. Please
         upgrade.</canvas
       >
+      <!-- <label><input class="colorplayer" type="color"/></label> -->
     </div>
   </body>
 </html>
