--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <button id="centerbtn" class="btn-play">
           <a href="./coregame.html">Play</a>
         </button>
-        <button id="letfupcorner" class="btn-playfriend">
+        <!-- <button id="letfupcorner" class="btn-playfriend">
           Play with friend!!
-        </button>
+        </button> -->
       </div>
       <span class="rigthtopcorner"
         ><p id="home"><a href="./index.html">Home</a></p>
