--- a/coregame.html
+++ b/coregame.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>LessFarGame</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="./coregame.css" />
     <script defer src="./main2.js"></script>
   </head>
   <body>
@@ -15,6 +20,24 @@
         >Sorry, your browser does not support canvas technology. Please
         upgrade.</canvas
       >
+      <div class="playerWriten">
+        <p
+          >
+          <p id="player1"></p>Touch A to stop
+      </p>
+        <a
+          ><p id="player2"></p>
+          Touch W to stop</a
+        >
+        <a
+          ><p id="player3"></p>
+          Touch $ to stop</a
+        >
+        <a
+          ><p id="player4"></p>
+          Touch ! to stop</a
+        >
+      </div>
       <!-- <label><input class="colorplayer" type="color"/></label> -->
     </div>
   </body>
