--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>LessFar</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="./homepage.css" />
     <script src="./homepage.js" type="module"></script>
   </head>
   <body>
+    <p class="game-name">Less Far</p>
     <div class="page-1">
       <img
         class="logo"
@@ -16,15 +21,20 @@
         alt="Play with friend its better"
       />
       <div class="btn">
-        <button id="centerbtn" class="btn-play">
-          <a href="./coregame.html">Play</a>
-        </button>
+        <a href="./coregame.html">
+          <img
+            src="./logo game project.PNG"
+            alt="play"
+            id="centerbtn"
+            class="btn-play"
+          />
+        </a>
+
         <!-- <button id="letfupcorner" class="btn-playfriend">
           Play with friend!!
         </button> -->
       </div>
-      <span class="rigthtopcorner"
-        ><p id="home"><a href="./index.html">Home</a></p>
+      <span class="rigthtopcorner">
         <p id="Contact"><a href="./contact.html">Contact</a></p></span
       >
     </div>
