--- a/coregame.html
+++ b/coregame.html
@@ -21,22 +21,10 @@
         upgrade.</canvas
       >
       <div class="playerWriten">
-        <p
-          >
-          <p id="player1"></p>Touch A to stop
-      </p>
-        <a
-          ><p id="player2"></p>
-          Touch W to stop</a
-        >
-        <a
-          ><p id="player3"></p>
-          Touch $ to stop</a
-        >
-        <a
-          ><p id="player4"></p>
-          Touch ! to stop</a
-        >
+        <p id="player1"></p>
+        <p id="player2"></p>
+        <p id="player3"></p>
+        <p id="player4"></p>
       </div>
       <!-- <label><input class="colorplayer" type="color"/></label> -->
     </div>
